kubernetes/config/test/secrets/traefik-dashboard.enc.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    name: traefik-dashboard
    annotations: null
    namespace: traefik
spec:
    entryPoints:
        - websecure
    tls:
        secretName: traefik-dashboard-cert
    routes:
        - kind: Rule
          match: ENC[AES256_GCM,data:nMyDwCiZNU2iwCjRNFRKAeI3nG8Z1NhbAgZV+WyYuyE=,iv:OMuvhIIGnRiMAaPWnulNjNYS353aPbg1moqcmfU84Rk=,tag:8+RvBptrOYuCUFySVwJzVA==,type:str]
          services:
            - name: api@internal
              kind: TraefikService
        - kind: Rule
          match: ENC[AES256_GCM,data:jciJgMAe5KfSmbiQrYjM9OjON/Nh+M2oQg9GojUKV3vP0dHcFNC0uZ7wprl+YuTLfYDtEAdTlA==,iv:f7sUdjyNn19ecz4+6qkFJkegI3KYcD5VGgoa4iH2nrA=,tag:vmvfeay5E7nnvCTgx0r7ng==,type:str]
          services:
            - name: api@internal
              kind: TraefikService
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1987m5wdr5t8z9kvhun4sa8nm9ygpt8mrh63mysv7x57fk52xacvqpmnp27
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBzbkJNaXBDdzNKL1FKRUVG
[...]
            ZmUOdfNkjwLh7gZSE5Q4pjAwstMxpau9tqh8mWTwobzp9yV614n7Og==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-09-26T19:15:31Z"
    mac: ENC[AES256_GCM,data:Zw85ohPiBSlfvcxIHVBDXBK9CJARHeYOc1JVwtIBVHSrPR98TeFA7luCesmeJGL+7JEyuAqF1AC+EilQv0mnHTmoQWkyVmI3U+sRd49DPeuYUfAZKC4PctkpQFPdcwdgiQm34kJY9uWzTGKReUBTDNe3YshJE82abdOQimoMCgU=,iv:tW/Wve5k2YZSaMf/JY3H2Le/ABgTJcuE/rvfXOsp0G8=,tag:oC7hgE3cAAzV4UrUOLcW3Q==,type:str]
    pgp: []
    encrypted_regex: ^(user.*|pass.*|.*[Bb]earer.*|.*[Kk]ey|.*[Kk]eys|salt|sentry.*|.*[Tt]oken|data|stringData|match)$
    version: 3.9.0
